// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Paragraph />:  size props === [7px, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    max-width: 921.5999999999999px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<p
  class="c0"
  font-size="7px,24px"
/>
`;

exports[`Test <Paragraph />:  size props === [body, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 537.6px;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    max-width: 921.5999999999999px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<p
  class="c0"
  font-size="14px,24px"
/>
`;

exports[`Test <Paragraph />:  size props === heroHeading works 1`] = `
.c0 {
  box-sizing: border-box;
  max-width: 2457.6px;
  font-size: 64px;
  line-height: 1.3;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<p
  class="c0"
  font-size="64px"
/>
`;

exports[`Test <Text />:  size props === [7px, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<div
  class="c0"
  font-size="7px,24px"
/>
`;

exports[`Test <Text />:  size props === [body, sectionHeading] with noDefaultLineHeight works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

<div
  class="c0"
  font-size="14px,24px"
/>
`;

exports[`Test <Text />:  size props === [body, sectionHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

@media screen and (min-width:768px) {
  .c0 {
    font-size: 24px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    line-height: 1.61803398875;
  }
}

<div
  class="c0"
  font-size="14px,24px"
/>
`;

exports[`Test <Text />:  size props === [heroHeading] works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="14px"
/>
`;

exports[`Test <Text />:  size props === 7px works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 7px;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="7px"
/>
`;

exports[`Test <Text />:  size props === heroHeading works 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.61803398875;
  -webkit-transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
  transition: all 0.3s cubic-bezier(0.53,0.01,0.36,1.63);
}

<div
  class="c0"
  font-size="14px"
/>
`;
